@@ -13,91 +13,9 @@
     "cwd": "${workspaceRoot}/build/src/kv/tests"
   },
   "C_Cpp.formatting": "Disabled",
-  "C_Cpp.autocomplete": "Disabled",
-  "C_Cpp.errorSquiggles": "Disabled",
   "astyle.astylerc": "${workspaceRoot}/.astylerc",
   "astyle.c.enable": true,
   "astyle.cpp.enable": true,
-  "clang.completion.enable": true,
-  "clang.diagnostic.enable": true,
-  "clang.cflags": [
-    "-D_GNU_SOURCE",
-    "-D_LARGEFILE_SOURCE",
-    "-D_FILE_OFFSET_BITS=64",
-    "-DIW_64=1",
-    "-DIW_HAVE_CLOCK_MONOTONIC=1",
-    "-DIW_HAVE_PTHREAD_CONDATTR_SETCLOCK=1",
-    "-std=gnu11",
-    "-Wc99-compat",
-    "-Wall",
-    "-Wcast-qual",
-    "-Wunused",
-    "-Wnonportable-system-include-path",
-    "-Wno-sign-compare",
-    "-Wno-unused-parameter",
-    "-Wno-unknown-pragmas",
-    "-Wno-unused-function",
-    "-Wno-missing-field-initializers",
-    "-Wno-missing-braces",
-    "-Wno-pragma-once-outside-header",
-    "-I${workspaceRoot}/build/src/generated",
-    "-I${workspaceRoot}/build/src/extern_leveldb/include",
-    "-I${workspaceRoot}/build/src/extern_lmdb/libraries/liblmdb",
-    "-I${workspaceRoot}/build/src/extern_kyc/install/include",
-    "-I${workspaceRoot}/build/src/extern_tc/install/include",
-    "-I${workspaceRoot}/build/src/extern_wt/install/include",
-    "-I${workspaceRoot}/src",
-    "-I${workspaceRoot}/src/log",
-    "-I${workspaceRoot}/src/utils",
-    "-I${workspaceRoot}/src/platform",
-    "-I${workspaceRoot}/src/fs",
-    "-I${workspaceRoot}/src/kv",
-    "-I${workspaceRoot}/src/rdb"
-  ],
-  "clang.cxxflags": [
-    "-D_GNU_SOURCE",
-    "-D_LARGEFILE_SOURCE",
-    "-D_FILE_OFFSET_BITS=64",
-    "-DIW_64=1",
-    "-DIW_HAVE_CLOCK_MONOTONIC=1",
-    "-DIW_HAVE_PTHREAD_CONDATTR_SETCLOCK=1",
-    "-std=c++11",
-    "-Wall",
-    "-Wcast-qual",
-    "-Wunused",
-    "-Wnonportable-system-include-path",
-    "-Wno-sign-compare",
-    "-Wno-unused-parameter",
-    "-Wno-unknown-pragmas",
-    "-Wno-unused-function",
-    "-Wno-missing-field-initializers",
-    "-Wno-pragma-once-outside-header",
-    "-I${workspaceRoot}/build/src/generated",
-    "-I${workspaceRoot}/build/src/extern_leveldb/include",
-    "-I${workspaceRoot}/build/src/extern_lmdb/libraries/liblmdb",
-    "-I${workspaceRoot}/build/src/extern_kyc/install/include",
-    "-I${workspaceRoot}/build/src/extern_tc/install/include",
-    "-I${workspaceRoot}/build/src/extern_wt/install/include",
-    "-I${workspaceRoot}/src",
-    "-I${workspaceRoot}/src/log",
-    "-I${workspaceRoot}/src/utils",
-    "-I${workspaceRoot}/src/platform",
-    "-I${workspaceRoot}/src/fs",
-    "-I${workspaceRoot}/src/kv",
-    "-I${workspaceRoot}/src/rdb"
-  ],
-  "files.associations": {
-    "*.h": "c",
-    "iowow.3": "troff",
-    "istream": "c",
-    "ostream": "c",
-    "type_traits": "c",
-    "slist": "c",
-    "array": "c",
-    "initializer_list": "c",
-    "utility": "c",
-    "*.ipp": "c"
-  },
   "python.pythonPath": "/usr/bin/python3",
   "python.linting.pylintEnabled": false,
   "python.linting.enabled": true,
