@@ -1,5 +1,6 @@
 iowow (1.4.5) UNRELEASED; urgency=medium
 
+  * Added `iwstree_int64_cmp` (iwstree.h)
   * Added `IW_DEPRECATED` (basedefs.h)
 
  -- Anton Adamansky <adamansky@gmail.com>  Sun, 03 May 2020 01:08:50 +0700
